[gd_scene load_steps=7 format=3 uid="uid://c5vy4j04yih54"]

[ext_resource type="Script" uid="uid://bwlkkwfk4bcuy" path="res://scripts/battle/battle_manager.gd" id="1_battle"]
[ext_resource type="Texture2D" uid="uid://bnoahwud6qeff" path="res://textures/effects/战斗场景.png" id="2_3ma01"]
[ext_resource type="Script" uid="uid://tuf8sc1sf5gd" path="res://scripts/camera/camera_follower.gd" id="3_0d42y"]
[ext_resource type="PackedScene" uid="uid://bb2kswvspaq4f" path="res://scenes/characters/player.tscn" id="3_3epie"]
[ext_resource type="PackedScene" path="res://scenes/ui/skill_ui.tscn" id="4_skill_ui"]
[ext_resource type="PackedScene" path="res://scenes/boundaries/ellipse_boundary.tscn" id="5_boundary"]

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_battle")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_3ma01")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1e-05, 1e-05)
zoom = Vector2(2, 2)
script = ExtResource("3_0d42y")

[node name="player" parent="." instance=ExtResource("3_3epie")]
position = Vector2(-653, -22)

[node name="EllipseBoundary" parent="." instance=ExtResource("5_boundary")]
ellipse_center = Vector2(0, 0)
ellipse_radius_x = 1200.0
ellipse_radius_y = 860.0
boundary_segments = 128

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EnemyKillCounter" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Title" type="Label" parent="CanvasLayer/EnemyKillCounter"]
layout_mode = 0
offset_top = -25.0
offset_right = 300.0
offset_bottom = 0.0
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "还需击杀"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/EnemyKillCounter"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHPBar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PlayerHPBar"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 30.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/PlayerHPBar"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/PlayerHPBar"]
layout_mode = 0
offset_top = -25.0
offset_right = 100.0
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 20
text = "玩家血量"

[node name="DebugToggle" type="CheckButton" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 60.0
text = "显示判定"

[node name="SkillUIContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 84.0
grow_horizontal = 0

[node name="SkillUI" parent="CanvasLayer/SkillUIContainer" instance=ExtResource("4_skill_ui")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="BurstUIContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -100.0
offset_bottom = 84.0
grow_horizontal = 0

[node name="BurstUI" parent="CanvasLayer/BurstUIContainer" instance=ExtResource("4_skill_ui")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
